# votify

./: .gitignore  CMakeLists.txt  Librerias.txt  README.md  ServerGui.cpp  main  main.cpp  server  server.cpp  server.h
VotifyCode/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
cliente/: .gitignore  Cargo.toml
cliente/src/: cliente_Server.rs  main.rs
paginated_list/: PaginatedList.cpp  PaginatedList.h  main.cpp
servidor/: ArrayPagedList.cpp  ArrayPagedList.h  CMakeLists.txt  GUI Server.glade  GUI Server.glade~  ListaPaginada.cpp  ListaPaginada.h  PagedArray.cpp  PagedArray.h  config.ini  main.cpp  playlist.cpp  playlist.h  playlist.json  priority_queue.cpp  priority_queue.h  server.cpp  server.h
